# scribe

./: .dockerignore  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  mise.toml  pyproject.toml  todo.md
.github/: dependabot.yml
.github/scripts/: determine_next_version.py  update_changelog.py  update_pyproject_version.py  update_readme_version.py
.github/workflows/: ci.yml  lint-markdown.yml  qualify.yml  release.yml  update-version.yml  uv-qualify.yml
Docker/: Dockerfile  compose.yml
docs/agy/fix_mise_check_warnings/: implementation_plan.md  task.md  task_pr_review.md  walkthrough.md
scribe/: __init__.py  file_scribe.py  file_sorter.py  zipper.py
tests/: __init__.py  test_file_scribe.py  test_file_sorter.py  test_zipper.py
