[project]
name = "scribe"
version = "1.0.0"
description = ""
authors = [
  { name = "Seika", email = "33862136+Seika139@users.noreply.github.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["cryptography>=44.0.2,<47.0.0", "pathspec (>=0.12.1,<0.13.0)"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.18.2,<2", "pytest>=9", "ruff>=0.14.8"]

[tool.hatch.build.targets.sdist]
include = ["scribe"]

[tool.hatch.build.targets.wheel]
include = ["scribe"]

[tool.ruff]
line-length = 88
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY001",
  "COM812",
  # D系(Docstring)のポリシーは外部公開する部分は unignore していきたい
  "D100",
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  "D203",    # D211 と競合するため無効化
  "D213",    # D212 と競合するため無効化
  "D415",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "PLR0911",
  "PLR0914",
  "PLR0915",
  "PLR2004",
  "PLR6301",
  "T201",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
]

[tool.ruff.lint.flake8-tidy-imports]
# 相対インポートを禁止し、絶対インポートを強制する
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
# C901 を有効化する代わりに閾値を上げる
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",   # Allow use of assert statements in tests
  "SLF001", # Allow use private members in tests
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["spark_rag_core"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["^build/", "^tmp/", "^out/tmp/"]
